use submodules-cmake branch for stl-import submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "submodules/stl-import"]
 	path = submodules/stl-import
 	url = git@github.com:cschadl/stl-import.git
-	branch = submodules
+	branch = submodules-cmake
